--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.10"
 gensim = "^4.2.0"
 scikit-learn = "^1.1.3"
+fastapi = "^0.75.2"
+uvicorn = "^0.17.6"
 
 
 [build-system]
